// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuItem should be disabled 1`] = `
<button
  className="main-menu-item main-menu-item_disabled"
  disabled={true}
  onClick={[Function]}
/>
`;

exports[`MainMenuItem simple render 1`] = `
<button
  className="main-menu-item"
  disabled={null}
  onClick={[Function]}
/>
`;
